--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/NicanorA2023/Challenge_Alura_Store/blob/main/AluraStoreLatam.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "### Importación de datos\n",
         "\n"
@@ -26,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -433,7 +444,7 @@
       "metadata": {
         "id": "KDyr8E71V3m-"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -452,7 +463,7 @@
         "id": "KSWw1_Ob-A8o",
         "outputId": "a891d511-8540-466e-de9b-b0422f7ff1e3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +498,7 @@
       "metadata": {
         "id": "yZR6cOjXYSk1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,7 +522,7 @@
         "id": "WMZsUvKy-vjI",
         "outputId": "c7fc62c7-3ad6-43b3-c827-1c0af620b56f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,7 +902,7 @@
       "metadata": {
         "id": "I0KkjPoTY88F"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -910,7 +921,7 @@
         "id": "9MkPrn8W_gvn",
         "outputId": "0bac81fa-e8fb-48f0-f73f-f2a9728d198d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -945,7 +956,7 @@
       "metadata": {
         "id": "0Sw3sd4IZIGW"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -984,7 +995,7 @@
         "id": "Z7539mwIAOjh",
         "outputId": "ba8b288d-5676-4010-925c-314f27f7ea80"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,7 +1615,7 @@
       "metadata": {
         "id": "JfvPzyWEA5oQ"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1623,7 +1634,7 @@
         "id": "z8InQ7RmA-38",
         "outputId": "040cf67d-e770-4c5a-e335-aebb65c7e1b9"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
